--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -86,8 +86,8 @@
                                                     <td>
                                                         <%= appointment.lecturerName %>
                                                     </td>
-                                                    <td><a href="/studentAppointment/<%= appointment.id %>">Modify</a></td>
-                                                    <td><a href="/studentAppointment/<%= appointment.id %>">Cancel</a></td>
+                                                    <td><a href="/cancel/<%= appointment.id %>">Modify</a></td>
+                                                    <td><a href="/cancel/<%= appointment.id %>">Cancel</a></td>
 
                                                
                                             </tr>
