--- a/SRC/views/settings.ejs
+++ b/SRC/views/settings.ejs
@@ -6,7 +6,7 @@
   <script defer src="/scripts/settings.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="/images/settings.css" rel="stylesheet">
+  <link href="/styles/settings.css" rel="stylesheet">
   <title>Settings</title>
  
   
