--- a/SRC/views/settings.ejs
+++ b/SRC/views/settings.ejs
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="left-container">
       <h2>Settings</h2>
-      <button id="accountButton">Account</button>
+      <button id="accountButton" href="/account">Account</button>
       <button id="passwordButton">Password</button>
       <button id="DeleteAccount">Delete Account</button>
     </div>
