--- a/SRC/views/settings.ejs
+++ b/SRC/views/settings.ejs
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script defer src="/scripts/settings.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="/styles/settings.css" rel="stylesheet">
   <title>Settings</title>
  
@@ -15,14 +16,16 @@
   <div class="container">
     <div class="left-container">
       <h2>Settings</h2>
-      <button id="accountButton" href="/account">Account</button>
-      <button id="passwordButton">Password</button>
-      <button id="DeleteAccount">Delete Account</button>
+      <a class="nav-link" href="#" id="accountButton">Account</a>
+      <a class="nav-link" href="#" id="passwordButton">Password</a>
+      <a class="nav-link" href="#" id="DeleteAccount">Delete Account</a>
     </div>
+
     <div class="right-container" id="contentContainer">
+
+      
     
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
