--- a/SRC/views/account.ejs
+++ b/SRC/views/account.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script defer src="/scripts/account.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
@@ -11,10 +12,15 @@
     <h4>Edit Email</h4>
 <form>
     <div class="mb-3">
-        <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="example@example.com">
+        <form action="/update-email" method="post" id="email-form">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email-field" placeholder="example@example.com"
+            oninput="validateEmailWrapper(event)" />
+            <div id="email-error"></div>
+            <input type="submit" class="btn btn-primary" value="Save Email">
+        </form>
     </div>
-    <button type="submit" class="btn btn-primary">Save Email</button>
+    
 </form>
 
     
