--- a/SRC/views/settings.ejs
+++ b/SRC/views/settings.ejs
@@ -34,14 +34,15 @@
       </div>
     
    <!----------------------Password----------------------------->
+   <form action="/update-password" method="post" id="password-form">
     <div class="mb-3" id="paswordVerifide" style="display: none;">
       <label for="currentPassword" class="form-label">Current Password</label>
-      <input type="password" class="form-control" id="currentPassword">
+      <input  name = "currentPassword" type="password" class="form-control" id="currentPassword">
   </div>
 
   <div class="mb-3" id="paswordNew" style="display: none;">
       <label for="newPassword" class="form-label">New Password</label>
-      <input type="password" class="form-control" id="password"  oninput="validatePasswordWrapper(event)" />
+      <input name = "newPassword" type="password" class="form-control" id="password"  oninput="validatePasswordWrapper(event)" />
 
   </div>
   <div class="password_requirements">
@@ -54,13 +55,14 @@
 
   <div class="mb-3" id="paswordConf" style="display: none;">
       <label for="confirmPassword" class="form-label">Confirm New Password</label>
-      <input type="password" class="form-control" id="password_confirm"
+      <input name = "confirmPassword" type="password" class="form-control" id="password_confirm"
       oninput="confirmPasswordWrapper(event)" />
       <div class="input-group mb-3">
         <span id="password-fail"></span>
     <button type="submit" class="btn btn-primary">Submit</button>
   </div>
   </div>
+</form>
   
   </div>
 </body>
