--- a/SRC/views/searchAppointment.ejs
+++ b/SRC/views/searchAppointment.ejs
@@ -7,6 +7,16 @@
     <title>Search Appointment</title>
 </head>
 <body>
-    
+
+    <div class="search-page">
+        <div id="pre-search-content">
+          <h2>Appointment Search Page</h2>
+          <p>Use the search bar above to find appointments by Event Title or return all appointments for a Lecturer.</p>
+        </div>
+        <form action="/searchAppointments" method="post" id="searchAppointment">
+          <input name="search" type="text" id="search" placeholder="Search Appointments">
+          <button type="submit">Search</button>
+          </form>
+    </div>
 </body>
 </html>
