--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -58,7 +58,10 @@
             <div class="col-12 col-md-2">
                 <div class="row h-100">
                     <div class="col-12 menu-container">
-                        
+                        <nav class="nav flex-column">
+                            <a class="nav-link" href="/createTimeslot">Set Availability times</a>
+                            <a class="nav-link" id="Edit" href="\update">Edit Consultation</a>
+                        </nav>  
                     </div>
                 </div>
             </div>
