--- a/SRC/views/settings.ejs
+++ b/SRC/views/settings.ejs
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="left-container">
       <h2>Settings</h2>
-      <a class="nav-link" href="#" id="accountButton">Account</a>
+      <a class="nav-link" href="#" id="accountButton">Email</a>
       <a class="nav-link" href="#" id="passwordButton">Password</a>
       <a class="nav-link" href="#" id="DeleteAccount">Delete Account</a>
     </div>
