--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -66,7 +66,9 @@
 
            
     <div class="card text-center">
-       
+        <form id="includeAnotherLecturerForm" action="/createTimeslot" method="post">
+           
+        </form>
     </div>
 
 
