--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -67,15 +67,14 @@
            
     <div class="card text-center">
         <form id="includeAnotherLecturerForm" action="/createTimeslot" method="post">
-           
+            <div class="mb-3">
+                <label class="form-label">Add Lecturer
+                    <input name="includeAnotherLecturer" type="text" class="form-control" required>
+                </label><br>
+                <p class="form-errors" id="includeAnotherLecturerError"></p>
+            </div>
         </form>
     </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-    crossorigin="anonymous"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
