--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -72,7 +72,7 @@
                     <input name="includeAnotherLecturer" type="text" class="form-control" required>
                 </label><br>
                 <p class="form-errors" id="includeAnotherLecturerError"></p>
-                <input type="Submit"  name="Add">
+                <input type="submit" value="Add">
             </div>
         </form>
     </div>
