--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -63,34 +63,44 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="col-12 col-md-10"> <!-- Add this div -->
+                <div class="card text-center">
+                    <form id="includeAnotherLecturerForm" action="/createTimeslot" method="post">
+                        <div class="card text-center">
+                            <form id="includeAnotherLecturerForm" action="/createTimeslot" method="post">
+                                <div class="mb-3">
+                                    <label class="form-label">Add Lecturer
+                                        <input name="includeAnotherLecturer" type="text" class="form-control" required>
+                                    </label><br>
+                                    <p class="form-errors" id="includeAnotherLecturerError"></p>
+                                    <label class="form-label">Event Title
+                                        <input name="eventTitle" type="text" class="form-control" id="eventTitle" required>
+                                    </label><br>
+                                    <p class="form-errors" id="eventTitleError"></p>
+                    
+                                    <label class="form-label">Student Name
+                                        <input name="lecturerName" type="text" class="form-control" id="StudentName" required>
+                                    </label><br>
+                                    <p class="form-errors" id="studentNameError"></p>
+                    
+                                    <label class="form-label">Date
+                                        <input name="date" type="datetime-local" class="form-control" id="date" required>
+                                    </label><br>
+                                    <p class="form-errors" id="dateError"></p>
+                                
+                                    <input type="submit" value="Add">
+                                </div>
+                            </form>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>   
 
            
-    <div class="card text-center">
-        <form id="includeAnotherLecturerForm" action="/createTimeslot" method="post">
-            <div class="mb-3">
-                <label class="form-label">Add Lecturer
-                    <input name="includeAnotherLecturer" type="text" class="form-control" required>
-                </label><br>
-                <p class="form-errors" id="includeAnotherLecturerError"></p>
-                <label class="form-label">Event Title
-                    <input name="eventTitle" type="text" class="form-control" id="eventTitle" required>
-                </label><br>
-                <p class="form-errors" id="eventTitleError"></p>
-
-                <label class="form-label">Student Name
-                    <input name="lecturerName" type="text" class="form-control" id="StudentName" required>
-                </label><br>
-                <p class="form-errors" id="studentNameError"></p>
-
-                <label class="form-label">Date
-                    <input name="date" type="datetime-local" class="form-control" id="date" required>
-                </label><br>
-                <p class="form-errors" id="dateError"></p>
-            
-                <input type="submit" value="Add">
-            </div>
-        </form>
-    </div>
+ 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
